# python-package-template

./: LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: publish.yml
