[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "<PACKAGE-NAME>"
version = "<PACKAGE-VERSION>"
authors = [
  { name="<USER>" },
]
description = "<SHORT-DESCRIPTION>"
readme = "README.md"
requires-python = ">=<PYTHON-VERSION like 3.10>"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []


[project.urls]
"Homepage" = "https://github.com/<USER>/<REPOSITORY>"
"Bug Tracker" = "https://github.com/<USER>/<REPOSITORY>/issues"